@@ -591,6 +591,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8489. Subclass BlockInfo to represent contiguous blocks.
     (Zhe Zhang via jing9)
 
+    HDFS-8386. Improve synchronization of 'streamer' reference in
+    DFSOutputStream. (Rakesh R via wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
